-Make global nav default to invisible, fade in as needed -Fade out global nav when person is opened on history page -Enforce scroll is flush to left on history page when person is open -CSS class fix cuz I was stupid

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -238,6 +238,14 @@ a{
 	border: 2px solid #a18f6b;
 }
 
+.prevent-vertical-scroll {
+	overflow-y: hidden;
+}
+
+.prevent-horizontal-scroll {
+	overflow-x: hidden;
+}
+
 #watchHistory .general-ui-icon {
 	font-size: 2.5em;
 }
@@ -264,13 +272,21 @@ a{
 	text-align: right;
 	bottom: 50px;
 	z-index: 9001;
+	transition: 0.5s ease-in all;
+	opacity: 0;
+	pointer-events: none;
 }
 
 #globalNav a {
 	color: #f3f3f3;
 	font-size: 3em;
-	border-color: #f3f3f3
+	border-color: #f3f3f3;
 	margin: 0 10px;
+}
+
+#globalNav.visible {
+	opacity: 1;
+	pointer-events: auto;
 }
 
 #currentDevice {
@@ -1022,7 +1038,7 @@ left:65px;
 	width: 1792px;
 	position: absolute;
 	top: -2000px;
-	left: 90px;
+	left: 65px;
 	z-index: 9;
 	transition: 0.5s ease-in all;
 }
@@ -1153,7 +1169,7 @@ left:65px;
 	bottom: -150px;
 	width: 1150px;
 	height: 125px;
-	left: 230px;
+	left: 380px;
 	background: white;
 	border-radius: 2px;
 	box-shadow: 0 0 20px black;
@@ -1230,7 +1246,7 @@ left:65px;
 
 #watchHistory .galleryChildExpanded, #watchHistory .galleryChildExpanded div {
 	z-index: 29;
-	left: 90px !important;
+	left: 65px !important;
 	top: 0 !important;
 	width: 1792px !important;
 	height: 1080px !important;
